--- a/app/views/play/display_challenge_trophy_selection.erb
+++ b/app/views/play/display_challenge_trophy_selection.erb
@@ -1,43 +1,44 @@
 <button style="background-color: #2541c3" onclick="GoBack()" type="button" class="btn btn-primary">
-  BACK</button>
+  BACK
+</button>
 <div id="main" class="text-center">
   <% if current_user.active_player.challenges.first.bid_trophy.nil? %>
       <h1>Pick a trophy to bid</h1>
-      <% trophies = current_user.active_player.trophies
-   else %>
+  <% trophies = current_user.active_player.trophies
+     else %>
       <h1>Pick a trophy to steal</h1>
-      <% if !current_user.active_player.opponent.nil?
+  <% if !current_user.active_player.opponent.nil?
        trophies = current_user.active_player.opponent.trophies
-           else
-      trophies = {}
-       end
-   end
+     else
+       trophies = {}
+     end
+     end
 
-       trophies.each do |trophy|
+     trophies.each do |trophy|
        if !current_user.active_player.challenges.first.bid_trophy.nil?
-           contains = false
-          current_user.active_player.trophies.each do |player_trophy|
+         contains = false
+         current_user.active_player.trophies.each do |player_trophy|
            if player_trophy === trophy
-                   contains = true
-               end
-               end
-           if contains
-               next
-          end
+             contains = true
+           end
+         end
+         if contains
+           next
+         end
        end %>
 
       <div id="trophy">
-        <input id=<%= trophy.category.title.gsub(/\s+/, '') %> type="image" value=<%=trophy.id%> src=<%= trophy.icon_path%> >
+        <input id=<%= trophy.category.title.gsub(/\s+/, '') %> type="image" value=<%= trophy.id %> src=<%= trophy.icon_path %> >
       </div>
-      <script type ="text/javascript" charset="utf-8">
-          $(document).ready(function() {
-              $(<%= trophy.category.title.gsub(/\s+/, '') %>).click(function() {
+      <script type="text/javascript" charset="utf-8">
+          $(document).ready(function () {
+              $(<%= trophy.category.title.gsub(/\s+/, '') %>).click(function () {
                   var currentTrophy = this.value;
                   $.ajax({
                               url: "challenges/set_challenge_trophy_by_id",
                               type: 'PUT',
                               dataType: 'json',
-                              data: {'trophy_id' : currentTrophy}
+                              data: {'trophy_id': currentTrophy}
                           }
                   )
                   setTimeout(ChangePage, 500);
@@ -57,8 +58,7 @@
 
     }
 
-    function GoBack()
-    {
+    function GoBack() {
         $('body').load('/play/display_full_meter_choice');
     }
 
