--- a/app/views/play/display_user_profile.erb
+++ b/app/views/play/display_user_profile.erb
@@ -1,33 +1,43 @@
 <div id="profile">
-<button style="background-color: #2541c3" onclick="GoBack()" type="button" class="btn btn-primary">
-  BACK</button><br>
-<br>
+  <button style="background-color: #2541c3" onclick="GoBack()" type="button" class="btn btn-primary">
+    BACK
+  </button>
+  <br>
+  <br>
+
   <h2 class="text-center">STATISTICS</h2>
   <br>
+
   <div id="questions-correct">
-  <h4 class="text-center">QUESTIONS CORRECT</h4>
+    <h4 class="text-center">QUESTIONS CORRECT</h4>
 
     <h3>Total: <%= current_user.total_correct %></h3>
-  <h3>Computer Science: <%= current_user.cs_counter.questions_correct %></h3>
-  <h3>Aquatic Animals: <%= current_user.aquatic_counter.questions_correct %></h3>
-  <h3>Memes: <%= current_user.memes_counter.questions_correct %></h3>
-  <h3>Basketball: <%= current_user.basketball_counter.questions_correct %></h3>
-  <h3>Literature: <%= current_user.literature_counter.questions_correct %></h3>
-  <h3>Music: <%= current_user.music_counter.questions_correct %></h3>
+
+    <h3>Computer Science: <%= current_user.cs_counter.questions_correct %></h3>
+
+    <h3>Aquatic Animals: <%= current_user.aquatic_counter.questions_correct %></h3>
+
+    <h3>Memes: <%= current_user.memes_counter.questions_correct %></h3>
+
+    <h3>Basketball: <%= current_user.basketball_counter.questions_correct %></h3>
+
+    <h3>Literature: <%= current_user.literature_counter.questions_correct %></h3>
+
+    <h3>Music: <%= current_user.music_counter.questions_correct %></h3>
   </div>
 
   <h4 class="text-center">RECORDS AGAINST OPPONENTS</h4>
   <h4>WINS</h4>
   <ul>
-  <% opponents = get_opponent_wins %>
-  <% opponents.each do |opponent| %>
-    <% if !opponent.nil? %>
+    <% opponents = get_opponent_wins %>
+    <% opponents.each do |opponent| %>
+        <% if !opponent.nil? %>
 
-    <%= opponent.email %>
-      <%= current_user.wins.get_wins_against_opponent(opponent) %>
+            <%= opponent.email %>
+            <%= current_user.wins.get_wins_against_opponent(opponent) %>
 
-  <% end %>
-  <% end %>
+        <% end %>
+    <% end %>
   </ul>
   <h4>LOSSES</h4>
   <% opponents = get_opponent_losses %>
@@ -39,19 +49,20 @@
   <% end %>
   <h2 class="text-center">ACHIEVEMENTS</h2>
   <% if current_user.achievements.count > 0 %>
-      <% current_user.achievements.each do |achievement|  %>
+      <% current_user.achievements.each do |achievement| %>
 
           <h6 class="text-justify"><%= achievement.title %></h6>
       <% end %>
-      <% current_user.achievements.each do |achievement|  %>
+      <% current_user.achievements.each do |achievement| %>
 
           <% trophy = achievement.category.trophy %>
 
-          <img id="trophy" src= <%= trophy.icon_path%>>
+          <img id="trophy" src= <%= trophy.icon_path %>>
 
       <% end %>
   <% else %>
       <br>
+
       <h3 class="text-center">NONE</h3>
   <% end %>
   <br>
@@ -59,8 +70,7 @@
 
 
 <script>
-    function GoBack()
-    {
+    function GoBack() {
         window.location.replace("/");
     }
 </script>
