--- a/app/views/play/display_new_game_page.erb
+++ b/app/views/play/display_new_game_page.erb
@@ -16,24 +16,25 @@
 
 <div id="main" class="text-center">
   <button style="background-color: #2541c3" onclick="PlayNow()" type="button" class="btn btn-primary btn-lg btn-block">
-    PLAY NOW</button>
+    PLAY NOW
+  </button>
 </div>
 
 <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
       <h2 class="text-center">Friends</h2>
-        <ul>
-          <% if current_user.friendships.count < 1 %>
-                <h4>You have no friends! :(</h4>
-              <% end %>
-          <% for friendship in current_user.friendships %>
-              <li>
-                <%=h friendship.friend.email %>
-                <a id="friends" onclick="playFriend(<%= friendship.friend.id %>)">Select</a> <br>
-              </li>
-          <% end %>
-        </ul>
+      <ul>
+        <% if current_user.friendships.count < 1 %>
+            <h4>You have no friends! :(</h4>
+        <% end %>
+        <% for friendship in current_user.friendships %>
+            <li>
+              <%= h friendship.friend.email %>
+              <a id="friends" onclick="playFriend(<%= friendship.friend.id %>)">Select</a> <br>
+            </li>
+        <% end %>
+      </ul>
     </div>
   </div>
 </div>
@@ -46,18 +47,15 @@
             data: {id: id}
         });
     }
-      function PlayNow()
-    {
+    function PlayNow() {
         $('body').load('play/display_spinner.html');
     }
-    function FriendOpp(element)
-    {
+    function FriendOpp(element) {
         $('#choices #friend span').show();
         $('#choices #random span').hide();
     }
 
-    function RandomOpp(element)
-    {
+    function RandomOpp(element) {
         $('#choices #random span').show();
         $('#choices #friend span').hide();
     }
