--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -56,6 +56,12 @@
                 <i class="fa fa-users fa-3x fa-fw"></i>
               </span>
 
+            <span data-remote="<%= new_question_path %>"
+                  data-toggle="modal"
+                  data-target="#basicModal">
+              <i class="fa fa-server fa-3x fa-fw"></i>
+            </span>
+
               <span data-remote="<%= edit_user_registration_path %>"
                     data-toggle="modal"
                     data-target="#basicModal">
