--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,7 +1,7 @@
-<div class="text-center">
+<div class="text-center" style="padding: 50px">
   <h1>Submit A Question</h1>
 
   <%= render 'form' %>
 
-  <%= link_to 'Back', '/', class: 'btn btn-primary' %>
+
 </div>
